--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="main">
+    <div>
+      <div class="main">
       <div class="box1">
         <div class="a1"></div>
         <div class="a2">
@@ -32,5 +33,7 @@
         <div class="b4"></div>
       </div>
     </div>
+      <p>JOHN CARLO DIZON - IT3A - CPEITEL3</p>
+    </div>    
   </body>
 </html>
